- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    Qt Creator 3.4.0
- 
    None
- 
    Windows 7 64bit, 8GB memory, Qt Creator 32bit
Opening This file causes a crash.
When the code-model indexer reaches a file that includes this file (test_lpm.c) it also crashes.
| For Gerrit Dashboard: QTCREATORBUG-14390 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 112094,1 | C++: Limit parsing of initializer clauses | master | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 | 
| 112095,1 | CppEditor: Lower reservation of parentheses per line | master | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 | 
| 112096,1 | TextEditor: Optimize alignment in class Parenthesis | master | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 | 
| 112097,3 | C++: Limit parsing of initializer clauses | 3.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 | 
| 112098,3 | CppEditor: Lower reservation of parentheses per line | 3.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 | 
| 112099,2 | TextEditor: Optimize alignment in class Parenthesis | 3.4 | qt-creator/qt-creator | Status: ABANDONED | -1 | 0 | 
| 112106,2 | TextEditor: Optimize alignment in class Parenthesis | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 | 
| 112215,2 | CppTools: Allow to limit the files to process by file size | 3.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 | 
| 112216,6 | EditorManager: Warn before opening big text files | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |