TextEditor: Optimize alignment in class Parenthesis

Change-Id: I25d00a7d68fb85797c9d6edc5a3e70b698ce6b9b
Task-number: QTCREATORBUG-14390
Reviewed-by: Eike Ziller <eike.ziller@theqtcompany.com>
Reviewed-by: Orgad Shaneh <orgads@gmail.com>